fix: Remove unnecessary rows from auth templates to correct layout overflow error

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -802,6 +802,9 @@ a.nav-link {
     #home-hero {
         margin-top: 140px;
     }
+    .auth-container {
+        margin-top: 150px;
+    }
     }
 
 @media screen and (max-width: 500px) {
